@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-12T01:01:40Z",
-  "count_outdated" : 577,
-  "uniques_outdated" : 403,
+  "timestamp" : "2025-10-15T01:00:29Z",
+  "count_outdated" : 578,
+  "uniques_outdated" : 404,
   "count" : 579,
   "uniques" : 405,
   "clones" : [
-    {
-      "timestamp": "2025-09-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-11T00:00:00Z",
       "count": 1,
